# MQTT_notifications

./: .coverage  .dockerignore  call.py  clickhouse.py  main.py  notifications.py  pyproject.toml  readme.md  state.py
static/: calls.css  doorphone.css  main.css  notifications.css
templates/: calls.html  doorphone.html  main.html  notifications.html
tests/: test_call.py  test_clickhouse.py  test_main.py  test_notifications.py  test_state.py
